# portfolio

./: .gitignore  README.md
.github/workflows/: rust.yml
001_RS_event_stream_processing/: .gitignore  Progress.md  install.sh
001_RS_event_stream_processing/config/: azure_config.json  kafka_config.json
001_RS_event_stream_processing/src/: errors.rs  response.rs
001_RS_event_stream_processing/src/azure/: helper.rs  reader.rs  writer.rs
001_RS_event_stream_processing/src/kafka/: producer.rs
001_RS_event_stream_processing/terraform/: backend.tf  main.tf
001_RS_event_stream_processing/tests/: azure.rs  kafka.rs
001_event_stream_processing/: .gitignore  Cargo.toml  Progress.md  README.md
001_event_stream_processing/config/: api_config.json  azure_config.json
001_event_stream_processing/secret/: invalid_api_key.json  invalid_azure_key.json  invalid_kafka_key.json  readme.md
001_event_stream_processing/secrets/: invalid_api_key.json  invalid_azure_key.json
001_event_stream_processing/src/: app.rs  cli.rs  client.rs  config.rs  consumer.rs  lib.rs  main.rs  producer.rs  request.rs  response.rs
001_event_stream_processing/src/azure/: helper.rs  mod.rs  reader.rs  writer.rs
001_event_stream_processing/src/kafka/: consumer.rs
001_event_stream_processing/terraform/: variables.tf
001_event_stream_processing/tests/: api.rs  azure.rs  kafka.rs  menu.rs
