[package]
name = "exchange-stream"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
azure_core = "0.8"
azure_storage = "0.9"
azure_storage_blobs = "0.9"
futures = "0.3"
log = "0.4"
rdkafka = "0.29"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

