[package]
name = "exchange"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
azure_core = "0.10"
azure_storage = "0.10"
azure_storage_blobs = "0.10"
bytecount = "0.6"
clap = { version="4.1.4", features=["derive"] }
futures = "0.3"
jsonschema = "0.16"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
rdkafka = "0.29"
reqwest = { version = "0.11", features = ["json"] }
shellexpand = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subprocess = "0.2"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
uuid = "1.3"


# Since 0.3.0 main.rs is now app.rs commit-sha: 024b4abb02b1d28e9cfb8038ca39a7212bdca204
[[bin]]
name = "exchange"
path = "src/app.rs"